Fix for CSS height on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -8,7 +8,8 @@
 html, body {
     margin: 0;
     padding: 0;
-    min-height: 100vh;
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     background: #232D49;
     
 }
